--- a/index.html
+++ b/index.html
@@ -29,7 +29,65 @@
         <hr>
 
         <section id="main_content">
-          <p>We're an open group of software developers, with varying backgrounds, meeting weekly at Gangplank on Wednesdays at 8pm. Some past books/topics covered are: Clean Code, Test Driven Development, Working with Legacy Code, Seven Languages in Seven Weeks.</p>
+          <p>We're an open group of Phoenix-area software engineers and developers! We meet <a href="#where">weekly on Wednesday nights from 8pm to 10pm at Gangplank in Chandler</a>.</p>
+
+<p>Questions? <a href="https://codeaweso.me/_/contact/">Contact Mike Christianson</a>.</p>
+
+<h3>
+<a name="current-book" class="anchor" href="#current-book"><span class="octicon octicon-link"></span></a>Current book</h3>
+
+<p><em><a href="https://codeaweso.me/_/goodmath">Good Math: A Geek's Guide to the Beauty of Numbers, Logic, and Computation</a></em></p>
+
+<h3>
+<a name="" class="anchor" href="#"><span class="octicon octicon-link"></span></a><a href="https://codeaweso.me/_/goodmath"><img src="http://www.smugmug.com/photos/i-vHNF5rZ/0/Th/i-vHNF5rZ-Th.jpg" alt="Good Math cover"></a>
+</h3>
+
+<h3>
+<a name="how-does-it-work" class="anchor" href="#how-does-it-work"><span class="octicon octicon-link"></span></a>How does it work?</h3>
+
+<p>We read an agreed upon portion of the book on our own, then meet the following week to discuss what we've read. Occasionally we take turns presenting. <a name="where"></a> </p>
+
+<h3>
+<a name="where-do-you-meet" class="anchor" href="#where-do-you-meet"><span class="octicon octicon-link"></span></a>Where do you meet?</h3>
+
+<p>Our group meets at <a href="http://gangplankhq.com/chandler/">Gangplank Chandler</a> in the <em>Burgundy Lounge</em>, the first conference room on the right toward the rear of the building. Just ask someone to point you in the right direction if you need help finding us. </p>
+
+<h3>
+<a name="is-the-group-right-for-me" class="anchor" href="#is-the-group-right-for-me"><span class="octicon octicon-link"></span></a>Is the group right for me?</h3>
+
+<p>The group is focused on professional development for software engineers and developers. You should review the list of our <a href="#past-books">previously read books</a> and judge your skill and experience accordingly. If you are new to programming or are a student, you may be better served by a study group made of your peers. </p>
+
+<h3>
+<a name="should-i-wait-until-you-start-a-new-book" class="anchor" href="#should-i-wait-until-you-start-a-new-book"><span class="octicon octicon-link"></span></a>Should I wait until you start a new book?</h3>
+
+<p>It depends on the book. But, really, it's up to you.</p>
+
+
+
+<p><a name="past-books"></a> </p>
+
+<h3>
+<a name="past-books" class="anchor" href="#past-books"><span class="octicon octicon-link"></span></a>Past books</h3>
+
+<ul>
+<li><em>Clean Code</em></li>
+<li><em>TDD by Example</em></li>
+<li><em>Working Effectively with Legacy Code</em></li>
+<li><em>Seven Languages in Seven Weeks</em></li>
+<li><em>Learn You A Haskell</em></li>
+<li><em>Refactoring to Patterns</em></li>
+<li><em>Don't Make Me Think, Revisited</em></li>
+</ul><h3>
+<a name="potential-future-books-and-topics" class="anchor" href="#potential-future-books-and-topics"><span class="octicon octicon-link"></span></a>Potential Future Books and Topics</h3>
+
+<ul>
+<li><em>New Turing Omnibus</em></li>
+<li><em>Continuous Delivery</em></li>
+<li><em>Ship It!</em></li>
+<li><em>Growing OO Software Guided by Tests</em></li>
+<li><em>Domain Driven Design</em></li>
+<li><em>Structure and Interpretation of Computer Programs</em></li>
+</ul>
         </section>
 
         <footer>
