Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <section id="main_content">
           <p>We're an open group of Phoenix-area software engineers and developers! We meet <a href="#where">weekly on Wednesday nights from 8pm to 10pm at Gangplank in Chandler</a>.</p>
 
-<p>Questions? <a href="https://codeaweso.me/_/contact/">Contact Mike Christianson</a>.</p>
+<p>Questions? <a href="https://codeaweso.me/contact/">Contact Mike Christianson</a>.</p>
 
 <h3>
 <a name="current-book" class="anchor" href="#current-book"><span class="octicon octicon-link"></span></a>Current book</h3>
