Replace master branch with page content via GitHub

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <link href='https://fonts.googleapis.com/css?family=Chivo:900' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
+    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen">
+    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -29,33 +29,30 @@
         <hr>
 
         <section id="main_content">
-          <p>We're an open group of Phoenix-area software engineers and developers! We meet <a href="#where">weekly on Wednesday nights from 8pm to 10pm at Gangplank in Chandler</a>.</p>
+          <p><a href="http://www.amazon.com/gp/product/0195024028/ref=as_li_tl?ie=UTF8&amp;camp=1789&amp;creative=390957&amp;creativeASIN=0195024028&amp;linkCode=as2&amp;tag=swrg-20&amp;linkId=AVGAZVBJGMY5CO5Q"><img src="http://www.smugmug.com/photos/i-SLmJFXr/0/S/i-SLmJFXr-S.jpg" alt="The Timeless Way of Building cover"></a>
+We're an open group of Phoenix-area software engineers and developers! We meet every other week on Wednesday nights from 8pm to 10pm at <a href="#where">Gangplank in Chandler</a>.</p>
 
-<p>Questions? <a href="https://codeaweso.me/contact/">Contact Mike Christianson</a>.</p>
+<p>Questions? <a href="http://codeaweso.me/contact/">Contact Mike Christianson</a>.</p>
 
 <h3>
 <a name="current-book" class="anchor" href="#current-book"><span class="octicon octicon-link"></span></a>Current book</h3>
 
-<p><em><a href="https://codeaweso.me/_/goodmath">Good Math: A Geek's Guide to the Beauty of Numbers, Logic, and Computation</a></em></p>
-
-<h3>
-<a name="" class="anchor" href="#"><span class="octicon octicon-link"></span></a><a href="https://codeaweso.me/_/goodmath"><img src="http://www.smugmug.com/photos/i-vHNF5rZ/0/Th/i-vHNF5rZ-Th.jpg" alt="Good Math cover"></a>
-</h3>
+<p>Beginning Wednesday, October, 22, we are reading <a href="http://www.amazon.com/gp/product/0195024028/ref=as_li_tl?ie=UTF8&amp;camp=1789&amp;creative=390957&amp;creativeASIN=0195024028&amp;linkCode=as2&amp;tag=swrg-20&amp;linkId=AVGAZVBJGMY5CO5Q">The Timeless Way of Building</a>. </p>
 
 <h3>
 <a name="how-does-it-work" class="anchor" href="#how-does-it-work"><span class="octicon octicon-link"></span></a>How does it work?</h3>
 
-<p>We read an agreed upon portion of the book on our own, then meet the following week to discuss what we've read. Occasionally we take turns presenting. <a name="where"></a> </p>
+<p>We read an agreed upon portion of the book on our own, then meet in another two weeks to discuss what we've read. Occasionally, when the topic lends itself, we take turns presenting. <a name="where"></a></p>
 
 <h3>
 <a name="where-do-you-meet" class="anchor" href="#where-do-you-meet"><span class="octicon octicon-link"></span></a>Where do you meet?</h3>
 
-<p>Our group meets at <a href="http://gangplankhq.com/chandler/">Gangplank Chandler</a> in the <em>Burgundy Lounge</em>, the first conference room on the right toward the rear of the building. Just ask someone to point you in the right direction if you need help finding us. </p>
+<p>Our group meets at <a href="http://gangplankhq.com/chandler/">Gangplank Chandler</a> in the <em>Burgundy Lounge</em>, the first conference room on the right toward the rear of the building. Just ask someone to point you in the right direction if you need help finding us.</p>
 
 <h3>
 <a name="is-the-group-right-for-me" class="anchor" href="#is-the-group-right-for-me"><span class="octicon octicon-link"></span></a>Is the group right for me?</h3>
 
-<p>The group is focused on professional development for software engineers and developers. You should review the list of our <a href="#past-books">previously read books</a> and judge your skill and experience accordingly. If you are new to programming or are a student, you may be better served by a study group made of your peers. </p>
+<p>The group is focused on professional development for software engineers and developers. You should review the list of our <a href="#past-books">previously read books</a> and judge your skill and experience accordingly. If you are new to programming or are a student, you may be better served by a study group made of your peers.</p>
 
 <h3>
 <a name="should-i-wait-until-you-start-a-new-book" class="anchor" href="#should-i-wait-until-you-start-a-new-book"><span class="octicon octicon-link"></span></a>Should I wait until you start a new book?</h3>
@@ -64,7 +61,7 @@
 
 
 
-<p><a name="past-books"></a> </p>
+<p><a name="past-books"></a></p>
 
 <h3>
 <a name="past-books" class="anchor" href="#past-books"><span class="octicon octicon-link"></span></a>Past books</h3>
@@ -77,16 +74,16 @@
 <li><em>Learn You A Haskell</em></li>
 <li><em>Refactoring to Patterns</em></li>
 <li><em>Don't Make Me Think, Revisited</em></li>
-</ul><h3>
+<li><em>Good Math</em></li>
+</ul>
+
+<h3>
 <a name="potential-future-books-and-topics" class="anchor" href="#potential-future-books-and-topics"><span class="octicon octicon-link"></span></a>Potential Future Books and Topics</h3>
 
 <ul>
-<li><em>New Turing Omnibus</em></li>
-<li><em>Continuous Delivery</em></li>
+<li><em>The Design of Everyday Things</em></li>
 <li><em>Ship It!</em></li>
-<li><em>Growing OO Software Guided by Tests</em></li>
 <li><em>Domain Driven Design</em></li>
-<li><em>Structure and Interpretation of Computer Programs</em></li>
 </ul>
         </section>
 
